--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/checkout@v3
       - name: get and store dependencies
         uses: ./.github/ga
+        with:
+          caching: "false"
       - name: Lint code
         run: npm run lint
   test:
