--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,10 +9,15 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+
       - name: get and store dependencies
+        id: cache_dep
         uses: ./.github/ga
         with:
           caching: "false"
+      - name: used cache or not
+        run: echo "cached used? ${{steps.cache_dep.outputs.used-cache}}"
+
       - name: Lint code
         run: npm run lint
   test:
